@@ -1,3 +1,3 @@
-EBUILD xonotic-data-9999.ebuild 3269 RMD160 f1b81cc0934fd09aafc200f5192777b2eb5821ca SHA1 b1fce15598b6b887e41a6b75a47c867091b7e514 SHA256 5a79eab902ee302ed90cfd18353155838e66de14a66861cc099d79aff69c34d9
-MISC ChangeLog 262 RMD160 51e22029be52a9b81c7e6162cf5a7ed166471a43 SHA1 116eaa1db6c7d10cce6e99e2b136f0b4133bf6b5 SHA256 eeaa809356bbf326814be955dd8f76ee9bb484a5f3cd278d64879c365a1ec24e
+EBUILD xonotic-data-9999.ebuild 3157 RMD160 fa2f059f87af2b82e0d80c457172bc5395862711 SHA1 2efbc89cac57135a3857ccc663f86f9a2a41e89f SHA256 f70034d1544462507cd9bdf8a9539f59e2591752cb47ded58e4c63175ddefdae
+MISC ChangeLog 368 RMD160 cb2bc0c07404351cd0a5ba7192c6980beed9ac4c SHA1 6dc140a035ee08b6616a3bd6312fd4e8791f5967 SHA256 982f274a7a8cb7bc852716d65622ed2c792f51dada8e42b97a392a0d64cf033a
 MISC metadata.xml 464 RMD160 86d7fbea6edcba6452d3581044ca1a1a77239da5 SHA1 4615957949527226200e033661405ed8459f498d SHA256 d9a07557c99e4b12bafbb7f547ee63cf6d9931e4a8a47e2a5a5bbefc89097af2
