@@ -1,0 +1,3 @@
+EBUILD xonotic-maps-9999.ebuild 4155 RMD160 eac6c10cb4160953eb4cdebe8150fb3faf668a27 SHA1 67167d2088741d7a2f2dc8b9e3121198902d0ae1 SHA256 6ce44b746452c084e584c983e09b7aeaca2ed68049259fc73da9894c845dedea
+MISC ChangeLog 262 RMD160 b136ba7dfdaea2696a0575e599b9b8e3b66fc751 SHA1 c3091a3f107febe17c8f5af73b7f9f850760361e SHA256 328a3121bc8755ab9eb647f7face92488dc207ec8dd0d577e555fe47631c636f
+MISC metadata.xml 358 RMD160 d359d97e1fe00e091edab63e3f84beac79026591 SHA1 dbc990c52cca3f7b558676366987f9e7a63dc41a SHA256 0174531ceaaeb8b9dc8a81de9624828dc03e5d8ca42e04f9036cac6952493ef0
