@@ -1,0 +1,10 @@
+# ChangeLog for games-fps/xonotic-maps
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+*xonotic-maps-9999 (02 Feb 2011)
+
+  02 Feb 2011; Nikoli <nikoli@lavabit.com> +xonotic-maps-9999.ebuild,
+  +metadata.xml:
+  initial ebuild
+
