@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Feb 2011; Nikoli <nikoli@lavabit.com> xonotic-data-9999.ebuild:
+  move maps to xonotic-maps package
+
 *xonotic-data-9999 (17 Jan 2011)
 
   17 Jan 2011; Nikoli <nikoli@lavabit.com> +xonotic-data-9999.ebuild,
